[gd_scene load_steps=98 format=3 uid="uid://dibi1q00jp0my"]

[ext_resource type="Script" uid="uid://crem7kr5k6c3g" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://cqrtylgbusfxw" path="res://Sprites/Knight/_Idle.png" id="2_6t5aa"]
[ext_resource type="Texture2D" uid="uid://coobp0w27wyo3" path="res://Sprites/Knight/_Dash.png" id="2_f1ek2"]
[ext_resource type="Script" uid="uid://cg77pialxj2cf" path="res://Scripts/Stats.gd" id="2_fd4e3"]
[ext_resource type="Texture2D" uid="uid://ds4kna0reptpt" path="res://Sprites/Knight/_Crouch.png" id="2_pu2lt"]
[ext_resource type="Texture2D" uid="uid://dvfykja1lcftn" path="res://Sprites/Knight/_Jump.png" id="2_x3wgy"]
[ext_resource type="Texture2D" uid="uid://278i4ctcnboy" path="res://Sprites/Knight/_JumpFallInbetween.png" id="3_3smsa"]
[ext_resource type="Texture2D" uid="uid://b4p0v4iu2fv4p" path="res://Sprites/Knight/_Run.png" id="3_6t5aa"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://dtpo23rgtcltr" path="res://player_nodes_states_machines.tres" id="3_qqcod"]
[ext_resource type="Texture2D" uid="uid://rt8htxpym6xl" path="res://Sprites/Knight/_CrouchTransition.png" id="3_ukyrk"]
[ext_resource type="Texture2D" uid="uid://ckshh15c1rk7y" path="res://Sprites/Knight/_CrouchWalk.png" id="4_7dp3o"]
[ext_resource type="Texture2D" uid="uid://chfyqvb0pnkyo" path="res://Sprites/Knight/_Fall.png" id="4_8erm5"]
[ext_resource type="Texture2D" uid="uid://by803tf2sjwjs" path="res://Sprites/Knight/_TurnAround.png" id="7_3smsa"]
[ext_resource type="Texture2D" uid="uid://b53djudtykl86" path="res://Sprites/Knight/_Roll.png" id="7_tx1dd"]
[ext_resource type="Shape3D" uid="uid://cgbcrqpfd7mdn" path="res://CollisionsShapes/standing_shape.tres" id="13_7dp3o"]
[ext_resource type="Shape3D" uid="uid://yrqovo3teadk" path="res://CollisionsShapes/crouching_shape.tres" id="14_h4iuc"]
[ext_resource type="Script" uid="uid://kqkrffq8yr3u" path="res://Scripts/blob_shadow_ray_cast_3d.gd" id="15_h4iuc"]
[ext_resource type="Texture2D" uid="uid://c27o2suxl07xp" path="res://Textures/Red-Circle-PNG-Image-File.png" id="18_igrcy"]

[sub_resource type="Animation" id="Animation_bi64h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_p1odr"]
resource_name = "crouch"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"crouch"]
}

[sub_resource type="Animation" id="Animation_xuaoq"]
resource_name = "crouch_down"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"crouch_down"]
}

[sub_resource type="Animation" id="Animation_wohnl"]
resource_name = "crouch_up"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"crouch_up"]
}

[sub_resource type="Animation" id="Animation_36dho"]
resource_name = "crouch_walk"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"crouch_walk"]
}

[sub_resource type="Animation" id="Animation_yh6i2"]
resource_name = "dash"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"dash"]
}

[sub_resource type="Animation" id="Animation_ypfnu"]
resource_name = "double_jump"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"double_jump"]
}

[sub_resource type="Animation" id="Animation_y6uwr"]
resource_name = "fall"
length = 0.166675
loop_mode = 1
step = 0.083333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"fall"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.083333336, 0.16666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_wpjfl"]
resource_name = "idle"
length = 1.1250125
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}

[sub_resource type="Animation" id="Animation_2ijsl"]
resource_name = "jump"
length = 0.166675
loop_mode = 1
step = 0.083333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.083333336, 0.16666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_83xs0"]
resource_name = "jumpfallinbetween"
length = 0.083341666
loop_mode = 2
step = 0.083333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jumpfallinbetween"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.083333336),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_0gysh"]
resource_name = "roll"
length = 0.36667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"roll"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3.7252903e-09, 0.033333335, 0.06666667, 0.1, 0.13333334, 0.16666667, 0.2, 0.23333333, 0.26666668, 0.3, 0.33333334, 0.36666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_vfarp"]
resource_name = "turnaround"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"turnaround"]
}

[sub_resource type="Animation" id="Animation_nv4vc"]
resource_name = "walk"
length = 0.75000834
loop_mode = 1
step = 0.083333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.083333336, 0.16666667, 0.25, 0.33333334, 0.4166667, 0.5, 0.5833334, 0.6666667, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8gxox"]
_data = {
&"RESET": SubResource("Animation_bi64h"),
&"crouch": SubResource("Animation_p1odr"),
&"crouch_down": SubResource("Animation_xuaoq"),
&"crouch_up": SubResource("Animation_wohnl"),
&"crouch_walk": SubResource("Animation_36dho"),
&"dash": SubResource("Animation_yh6i2"),
&"double_jump": SubResource("Animation_ypfnu"),
&"fall": SubResource("Animation_y6uwr"),
&"idle": SubResource("Animation_wpjfl"),
&"jump": SubResource("Animation_2ijsl"),
&"jumpfallinbetween": SubResource("Animation_83xs0"),
&"roll": SubResource("Animation_0gysh"),
&"turnaround": SubResource("Animation_vfarp"),
&"walk": SubResource("Animation_nv4vc")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_5x828"]
atlas = ExtResource("2_pu2lt")
region = Rect2(34, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1k8q"]
atlas = ExtResource("3_ukyrk")
region = Rect2(34, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6mvm"]
atlas = ExtResource("4_7dp3o")
region = Rect2(34, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_57lvd"]
atlas = ExtResource("4_7dp3o")
region = Rect2(154, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie7r7"]
atlas = ExtResource("4_7dp3o")
region = Rect2(274, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq3lt"]
atlas = ExtResource("4_7dp3o")
region = Rect2(394, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_pukcj"]
atlas = ExtResource("4_7dp3o")
region = Rect2(514, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_1htnp"]
atlas = ExtResource("4_7dp3o")
region = Rect2(634, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_m376e"]
atlas = ExtResource("4_7dp3o")
region = Rect2(754, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_6b312"]
atlas = ExtResource("4_7dp3o")
region = Rect2(874, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv4vc"]
atlas = ExtResource("2_f1ek2")
region = Rect2(37, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gxox"]
atlas = ExtResource("2_f1ek2")
region = Rect2(157, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj1g2"]
atlas = ExtResource("2_x3wgy")
region = Rect2(35, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_usbl8"]
atlas = ExtResource("2_x3wgy")
region = Rect2(155, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtg1u"]
atlas = ExtResource("2_x3wgy")
region = Rect2(275, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfarp"]
atlas = ExtResource("4_8erm5")
region = Rect2(34, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6uwr"]
atlas = ExtResource("4_8erm5")
region = Rect2(154, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_83xs0"]
atlas = ExtResource("4_8erm5")
region = Rect2(274, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgqql"]
atlas = ExtResource("2_6t5aa")
region = Rect2(34, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkybt"]
atlas = ExtResource("2_6t5aa")
region = Rect2(154, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("2_6t5aa")
region = Rect2(274, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("2_6t5aa")
region = Rect2(394, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("2_6t5aa")
region = Rect2(514, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("2_6t5aa")
region = Rect2(634, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("2_6t5aa")
region = Rect2(754, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("2_6t5aa")
region = Rect2(874, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("2_6t5aa")
region = Rect2(994, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("2_6t5aa")
region = Rect2(1114, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ijsl"]
atlas = ExtResource("2_x3wgy")
region = Rect2(35, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1odr"]
atlas = ExtResource("2_x3wgy")
region = Rect2(155, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gysh"]
atlas = ExtResource("2_x3wgy")
region = Rect2(275, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypfnu"]
atlas = ExtResource("3_3smsa")
region = Rect2(34, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuaoq"]
atlas = ExtResource("3_3smsa")
region = Rect2(154, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_11gg7"]
atlas = ExtResource("7_tx1dd")
region = Rect2(30, 40, 60, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpa8y"]
atlas = ExtResource("7_tx1dd")
region = Rect2(150, 40, 60, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbwqj"]
atlas = ExtResource("7_tx1dd")
region = Rect2(270, 40, 60, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwi16"]
atlas = ExtResource("7_tx1dd")
region = Rect2(390, 40, 60, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqm"]
atlas = ExtResource("7_tx1dd")
region = Rect2(510, 40, 60, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph33w"]
atlas = ExtResource("7_tx1dd")
region = Rect2(630, 40, 60, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ldla"]
atlas = ExtResource("7_tx1dd")
region = Rect2(750, 40, 60, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7t2e"]
atlas = ExtResource("7_tx1dd")
region = Rect2(870, 40, 60, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmr2m"]
atlas = ExtResource("7_tx1dd")
region = Rect2(990, 40, 60, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax3m3"]
atlas = ExtResource("7_tx1dd")
region = Rect2(1110, 40, 60, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vlem"]
atlas = ExtResource("7_tx1dd")
region = Rect2(1230, 40, 60, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eeqe"]
atlas = ExtResource("7_tx1dd")
region = Rect2(1350, 40, 60, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("3_6t5aa")
region = Rect2(396, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_igrcy"]
atlas = ExtResource("3_6t5aa")
region = Rect2(516, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs7ks"]
atlas = ExtResource("3_6t5aa")
region = Rect2(636, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6n3p"]
atlas = ExtResource("3_6t5aa")
region = Rect2(756, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_olqyp"]
atlas = ExtResource("3_6t5aa")
region = Rect2(876, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpjfl"]
atlas = ExtResource("3_6t5aa")
region = Rect2(996, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi64h"]
atlas = ExtResource("3_6t5aa")
region = Rect2(1116, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = ExtResource("3_6t5aa")
region = Rect2(36, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = ExtResource("3_6t5aa")
region = Rect2(156, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = ExtResource("3_6t5aa")
region = Rect2(276, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_wohnl"]
atlas = ExtResource("7_3smsa")
region = Rect2(40, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_36dho"]
atlas = ExtResource("7_3smsa")
region = Rect2(160, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh6i2"]
atlas = ExtResource("7_3smsa")
region = Rect2(280, 40, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_7dp3o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x828")
}],
"loop": true,
"name": &"crouch",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1k8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x828")
}],
"loop": false,
"name": &"crouch_down",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x828")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1k8q")
}],
"loop": false,
"name": &"crouch_up",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6mvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57lvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie7r7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq3lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pukcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1htnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m376e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6b312")
}],
"loop": true,
"name": &"crouch_walk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv4vc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gxox")
}],
"loop": true,
"name": &"dash",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj1g2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usbl8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtg1u")
}],
"loop": false,
"name": &"double_jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfarp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6uwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83xs0")
}],
"loop": true,
"name": &"fall",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgqql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkybt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ijsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1odr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gysh")
}],
"loop": true,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypfnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuaoq")
}],
"loop": false,
"name": &"jumpfallinbetween",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_11gg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpa8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbwqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwi16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph33w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ldla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7t2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmr2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax3m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vlem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eeqe")
}],
"loop": false,
"name": &"roll",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqcod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igrcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6n3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olqyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpjfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi64h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dp3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4e3")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wohnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36dho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh6i2")
}],
"loop": false,
"name": &"turnaround",
"speed": 16.0
}]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7dp3o"]
radius = 0.06
height = 0.221

[sub_resource type="Gradient" id="Gradient_fd4e3"]
offsets = PackedFloat32Array(0.4631579, 0.74210525)
colors = PackedColorArray(0, 0, 0, 0.79607844, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qqcod"]
gradient = SubResource("Gradient_fd4e3")
fill = 1
fill_from = Vector2(0.5, 0.4957265)

[sub_resource type="SphereShape3D" id="SphereShape3D_fd4e3"]
radius = 0.55

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fd4e3"]
radius = 0.06
height = 0.38

[node name="Player" type="CharacterBody3D"]
collision_mask = 6
floor_stop_on_slope = false
script = ExtResource("1_cvnsp")
jump_height = 1.0
max_jumps = 1
roll_distance = 0.85
roll_duration = 0.4
air_roll_distance = 1.3
air_roll_duration = 0.5
air_roll_vertical_boost = 2.0
attack_damage = 15.0

[node name="Stats" type="Node" parent="."]
script = ExtResource("2_fd4e3")
metadata/_custom_type_script = "uid://cg77pialxj2cf"

[node name="StaminaRegenTimer" type="Timer" parent="."]
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true

[node name="RollTimer" type="Timer" parent="."]
one_shot = true

[node name="AirRollTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
tree_root = ExtResource("3_qqcod")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/InAir/blend_position = -0.0014131609
parameters/Locomotion/blend_position = 0.0048867315

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8gxox")
}

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.19967848, 0)
flip_h = true
billboard = 2
alpha_cut = 1
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_7dp3o")
animation = &"idle"

[node name="StandingShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.19, 0)
shape = ExtResource("13_7dp3o")

[node name="CrouchingShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.13470459, 0)
shape = ExtResource("14_h4iuc")
disabled = true

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.16, 0)
shape = SubResource("CapsuleShape3D_7dp3o")
target_position = Vector3(0, 0.11, 0)
margin = 0.01

[node name="BlobShadowRayCast3D" type="RayCast3D" parent="." node_paths=PackedStringArray("rigidbody")]
target_position = Vector3(0, -5, 0)
collision_mask = 18
script = ExtResource("15_h4iuc")
rigidbody = NodePath("..")

[node name="BlobShadow" type="Decal" parent="BlobShadowRayCast3D"]
size = Vector3(0.182, 0.025, 0.182)
texture_albedo = SubResource("GradientTexture2D_qqcod")

[node name="AutoAttackRange" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="AutoAttackRange"]
shape = SubResource("SphereShape3D_fd4e3")

[node name="DetectionHitbox" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.19, 0)
shape = SubResource("CapsuleShape3D_fd4e3")

[node name="AttackRangeDecal" type="Decal" parent="."]
layers = 2
size = Vector3(1.3, 2, 1.3)
texture_albedo = ExtResource("18_igrcy")
modulate = Color(1, 0, 0, 0.9529412)
cull_mask = 1

[connection signal="timeout" from="RollTimer" to="." method="_on_roll_timer_timeout"]
[connection signal="timeout" from="AirRollTimer" to="." method="_on_air_roll_timer_timeout"]
